# OD-project

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements.yml  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
data/: __init__.py  sql_workers.py  web_workers.py
diary/: 2.Scraping_the_data.md  README.md
src/data/: __init__.py  parallel_run_script.sh  sql_workers.py  web_workers.py
src/data/sql/: create_table_queries.py  tables_create_queries.py  workers.py
src/data/web/: workers.py
tests/: pytest.ini  test_web_workers.py  test_webscraper.py
webscraper/: main.py
webscraping/: webscraper.py
websraper/: example.html  main.py  test.csv
