[metadata]
name = OD-project
description = tool for finding a perfect place to live
author = Mateusz Dziuba
license = GNU GPLv3
license_file = LICENSE
platforms = linux, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
packages =
    data
install_requires =
    requests
    mpi4py
    beautifulsoup4
    mysql-connector-python
    tqdm
    lxml
python_requires = >=3.7
package_dir =
    = src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    tox-conda>=0.9.2

[options.package_data]
data = py.typed

[flake8]
max-line-length = 160